# SobelFilterCUDA

PracticaFinal/: CMakeCache.txt  CMakeLists.txt  Image_filter.cu  Makefile  Sobel_Filter  cmake_install.cmake
